--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,6 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
-    ports:
-      - "8000:8000"
     depends_on:
       - mysql
     environment:
@@ -20,6 +18,18 @@ services:
       DB_DATABASE: gerenciadorExt
       DB_USERNAME: cesara
       DB_PASSWORD: cesara
+
+  nginx:
+      image: nginx:stable-alpine
+      container_name: tcc_frontend
+      restart: always
+      ports:
+        - "80:80"
+      volumes:
+        - ./frontend-dist:/usr/share/nginx/html:ro
+        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      depends_on:
+        - app
 
   mysql:
     image: mysql:8.0
